# Josa1

project_template/: README.md
project_template/backend-template/: Dockerfile  gunicorn_conf.py  pyproject.toml
project_template/backend-template/src/: .env  main.py  settings.py
project_template/backend-template/src/api/channel/: api.py  model.py
project_template/backend-template/src/api/hero/: api.py  model.py
project_template/backend-template/src/api/knowledge/: api.py  model.py
project_template/backend-template/src/api/message/: __init__.py  model.py
project_template/backend-template/src/api/search/: __init__.py  model.py  service.py
project_template/backend-template/src/api/team/: model.py
project_template/backend-template/src/app/channel/: query.py  service.py
project_template/backend-template/src/app/hero/: query.py  service.py
project_template/backend-template/src/app/knowledge/: query.py  service.py
project_template/backend-template/src/app/message/: service.py
project_template/backend-template/src/config/: ai.py  db.py  fastapi.py  logging.py
project_template/backend-template/src/libs/: aa_pgvector.py
project_template/backend-template/src/utils/: assistant.py  db.py  times.py  worker.py
project_template/frontend-template/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vue.config.cjs
project_template/frontend-template/src/: App.vue  main.ts
project_template/frontend-template/src/assets/: main.css
project_template/frontend-template/src/components/: Header.vue  HelloWorld.vue  josaTargeList.vue  sideBar.vue  sideBar2.vue
project_template/frontend-template/src/components/modal/: addModal.vue
project_template/frontend-template/src/router/: index.ts
project_template/frontend-template/src/testSample/: function.ts
project_template/frontend-template/src/views/: AboutView.vue
